syntax = "proto3";

package main;

option go_package = "./proto";

// 添加角色信息表
message AddRoleReq {
  string create_by = 1; //创建者
  int32 data_scope = 2; //数据权限
  int32 is_admin = 3; //是否超级管理员
  string remark = 4; //备注
  string role_key = 5; //权限字符
  string role_name = 6; //角色名称
  int32 role_sort = 7; //角色排序
  int32 role_status = 8; //角色状态

}

message AddRoleResp {
  string pong = 1;
}

// 删除角色信息表
message DeleteRoleReq {
  repeated int64 ids = 1;
}

message DeleteRoleResp {
  string pong = 1;
}

// 更新角色信息表
message UpdateRoleReq {
  int32 data_scope = 1; //数据权限
  int64 id = 2; //编号
  int32 is_admin = 3; //是否超级管理员
  string remark = 4; //备注
  string role_key = 5; //权限字符
  string role_name = 6; //角色名称
  int32 role_sort = 7; //角色排序
  int32 role_status = 8; //角色状态
  string update_by = 9; //更新者

}

message UpdateRoleResp {
  string pong = 1;
}

// 更新角色信息表状态
message UpdateRoleStatusReq {
  repeated int64 ids = 1; //编号
  int32 role_status = 2; //角色状态
  string update_by = 3; //更新者

}

message UpdateRoleStatusResp {
  string pong = 1;
}

// 查询角色信息表详情
message QueryRoleDetailReq {
  int64 id = 1;
}

message QueryRoleDetailResp {
  string create_by = 1; //创建者
  string create_time = 2; //创建时间
  int32 data_scope = 3; //数据权限
  int64 id = 4; //编号
  int32 is_admin = 5; //是否超级管理员
  string update_time = 6; //更新时间
  string remark = 7; //备注
  string role_key = 8; //权限字符
  string role_name = 9; //角色名称
  int32 role_sort = 10; //角色排序
  int32 role_status = 11; //角色状态
  string update_by = 12; //更新者


}

// 分页查询角色信息表列表
message QueryRoleListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int32 is_admin = 3; //是否超级管理员
  string role_key = 4; //权限字符
  string role_name = 5; //角色名称
  int32 role_status = 6; //角色状态

}

message RoleListData {
  string create_by = 1; //创建者
  string create_time = 2; //创建时间
  int32 data_scope = 3; //数据权限
  int64 id = 4; //编号
  int32 is_admin = 5; //是否超级管理员
  string update_time = 6; //更新时间
  string remark = 7; //备注
  string role_key = 8; //权限字符
  string role_name = 9; //角色名称
  int32 role_sort = 10; //角色排序
  int32 role_status = 11; //角色状态
  string update_by = 12; //更新者


}

message QueryRoleListResp {
  int64 total = 1;
  repeated  RoleListData list = 2;
}

message QueryRoleMenuListReq {
  int64 RoleId = 1;
}

message MenuData {
  string background_url = 1; //接口地址
  string create_by = 2; //创建者
  string create_time = 3; //创建时间
  int64 id = 4; //编号
  string vue_redirect = 5; //vue的路由重定向
  string menu_icon = 6; //菜单图标
  string menu_name = 7; //菜单名称
  string menu_path = 8; //前端路由
  string menu_perms = 9; //权限标识
  int32 menu_sort = 10; //菜单排序
  int32 menu_status = 11; //菜单状态
  int32 menu_type = 12; //类型 0：目录,1：菜单,2：按钮,3：外链
  int64 parent_id = 13; //父菜单ID，一级菜单为0
  string remark = 14; //备注信息
  string update_by = 15; //更新者
  string update_time = 16; //更新时间
  string vue_component = 17; //vue的页面
  string vue_icon = 18; //vue的图标
  string vue_path = 19; //vue系统的path
  int32 is_visible = 20; //是否可见  0：否  1：是

}
message QueryRoleMenuListResp {
  repeated MenuData list = 1;
  repeated int64 MenuIds = 2;
}

message UpdateMenuRoleReq {
  int64 roleId = 1;
  repeated int64 menuIds = 2;
}

message UpdateMenuRoleResp {
  string pong = 1;
}

message QueryRoleUserListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int64 role_id = 3;//角色id
  int64 is_exist = 4; //角色是否已经拥有用户
  string mobile = 5; //手机号
  string user_name = 6; //昵称
}
message UserData {
  string avatar = 1; //头像
  string create_by = 2; //创建者
  string create_time = 3; //创建时间
  int64 dept_id = 4; //部门id
  string email = 5; //邮箱
  int64 id = 6; //编号
  int32 user_status = 7; //帐号状态（0正常 1停用）
  string login_ip = 8; //登录ip
  string login_time = 9; //登录时间
  string mobile = 10; //手机号
  string nick_name = 11; //昵称
  string remark = 12; //备注信息
  string update_by = 13; //更新者
  string update_time = 14; //更新时间
  string user_name = 15; //用户名

}
message QueryRoleUserListResp {
  repeated UserData list = 1;
  int64 total = 2;
}


message CancelAuthorizationReq {
  int64 roleId = 1;
  repeated int64 userIds = 2;
  int64 is_exist = 3; //0：取消授权，1：确认授权
}

message CancelAuthorizationResp {
  string pong = 1;
}


// 角色信息表
service RoleService {
  // 添加角色信息表
  rpc AddRole(AddRoleReq) returns (AddRoleResp){}
  // 删除角色信息表
  rpc DeleteRole(DeleteRoleReq) returns (DeleteRoleResp){}
  // 更新角色信息表
  rpc UpdateRole(UpdateRoleReq) returns (UpdateRoleResp ){}
  // 更新角色信息表状态
  rpc UpdateRoleStatus(UpdateRoleStatusReq) returns (UpdateRoleStatusResp ){}
  // 查询角色信息表详情
  rpc QueryRoleDetail(QueryRoleDetailReq) returns (QueryRoleDetailResp){}
  // 查询角色信息表列表
  rpc QueryRoleList(QueryRoleListReq) returns (QueryRoleListResp){}

  //查询用户与角色的关联
  rpc QueryRoleMenuList(QueryRoleMenuListReq) returns(QueryRoleMenuListResp);
  //更新用户与角色的关联
  rpc UpdateMenuRoleList(UpdateMenuRoleReq) returns(UpdateMenuRoleResp);

  //查询角色的用户关联
  rpc QueryRoleUserList(QueryRoleUserListReq) returns(QueryRoleUserListResp);

  //取消授权/确认授权
  rpc CancelAuthorization(CancelAuthorizationReq) returns(CancelAuthorizationResp);

}
